# ContextMemory

./: .gitignore  CMakeLists.txt  README.md
include/ContextMemory/: vector_store.h
src/: CMakeLists.txt
src/core/: index_manager.cpp  vector_store.cpp
test_data/: README.md  hardcoded_vectors.json
tests/: CMakeLists.txt  test_main.cpp
tests/core/: test_vector_store.cpp
